<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditUserActivity">

  <Button
      android:id="@+id/btn_remove"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginEnd="32dp"
      android:backgroundTint="@color/btn_back"
      android:text="@string/btn_remove"
      android:textColor="@color/black"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="@id/btn_update" />

  <Button
      android:id="@+id/btn_adopt"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginBottom="116dp"
      android:backgroundTint="@color/btn_back"
      android:text="@string/btn_adopt"
      android:textColor="@color/black"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.498"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/btn_update"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="28dp"
      android:layout_marginBottom="52dp"
      android:backgroundTint="@color/btn_back"
      android:text="@string/btn_edit"
      android:textColor="@color/black"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

  <EditText
      android:id="@+id/edit_dog_name"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="108dp"
      android:layout_marginTop="52dp"
      android:hint="@string/dog_name"
      android:inputType="text"
      android:textAlignment="center"
      android:textSize="@dimen/dog_size"
      app:layout_constraintStart_toEndOf="@+id/info_dog_name"
      app:layout_constraintTop_toTopOf="parent" />

  <ImageView
      android:id="@+id/imageView2"
      android:layout_width="279dp"
      android:layout_height="172dp"
      android:layout_marginTop="20dp"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/info_dog_name"
      tools:src="" />

  <EditText
      android:id="@+id/edit_breed"
      android:layout_width="304dp"
      android:layout_height="39dp"
      android:layout_marginTop="20dp"
      android:hint="@string/dog_breed"
      android:inputType="text"
      android:textAlignment="center"
      android:textSize="@dimen/dog_size"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/imageView2" />

  <EditText
      android:id="@+id/edit_gender"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="108dp"
      android:layout_marginTop="8dp"
      android:hint="@string/dog_gender_hint"
      android:inputType="text"
      android:textAlignment="center"
      android:textSize="@dimen/dog_size"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@id/edit_breed" />

  <EditText
      android:id="@+id/edit_desc"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="108dp"
      android:layout_marginTop="4dp"
      android:hint="@string/dog_desc"
      android:inputType="text"
      android:textAlignment="center"
      android:textSize="@dimen/dog_size"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/edit_birth" />

  <EditText
      android:id="@+id/edit_birth"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="108dp"
      android:layout_marginTop="8dp"
      android:hint="@string/dog_birth"
      android:inputType="text"
      android:textAlignment="center"
      android:textSize="@dimen/dog_size"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/edit_age" />

  <EditText
      android:id="@+id/edit_age"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:layout_marginStart="108dp"
      android:layout_marginTop="12dp"
      android:hint="@string/dog_age_hint"
      android:inputType="text"
      android:textAlignment="center"
      android:textSize="@dimen/dog_size"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/edit_gender" />

  <TextView
      android:id="@+id/textView5"
      android:layout_width="fill_parent"
      android:layout_height="wrap_content"
      android:background="@color/btn_back"
      android:fontFamily="sans-serif-black"
      android:gravity="center"
      android:hint="@string/dog_info"
      android:textSize="@dimen/desc_size"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/info_dog_name"
      android:layout_width="107dp"
      android:layout_height="38dp"
      android:layout_marginTop="52dp"
      android:gravity="center"
      android:text="@string/dog_name"
      android:textSize="@dimen/dog_size"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <TextView
      android:id="@+id/info_breed"
      android:layout_width="107dp"
      android:layout_height="38dp"
      android:gravity="center"
      android:text="@string/dog_breed"
      android:textSize="@dimen/dog_size"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/edit_breed" />

  <TextView
      android:id="@+id/info_gender"
      android:layout_width="107dp"
      android:layout_height="38dp"
      android:gravity="center"
      android:text="@string/dog_gender"
      android:textSize="@dimen/dog_size"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/edit_gender" />

  <TextView
      android:id="@+id/info_date"
      android:layout_width="107dp"
      android:layout_height="38dp"
      android:gravity="center"
      android:text="@string/dog_birth"
      android:textSize="@dimen/dog_size"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/edit_birth" />

  <TextView
      android:id="@+id/info_age"
      android:layout_width="107dp"
      android:layout_height="38dp"
      android:gravity="center"
      android:text="@string/dog_age"
      android:textSize="@dimen/dog_size"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/edit_age" />

  <TextView
      android:id="@+id/info_desc"
      android:layout_width="107dp"
      android:layout_height="38dp"
      android:gravity="center"
      android:text="@string/dog_desc"
      android:textSize="@dimen/dog_size"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="@+id/edit_desc" />

</androidx.constraintlayout.widget.ConstraintLayout>