<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".TitlePage">

    <Button
        android:id="@+id/ClearButton"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:backgroundTint="@color/btn_back"
        android:text="@string/btn_clear"
        android:textColor="@color/black"
        android:textSize="@dimen/btn_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/LoginButton" />

    <Button
        android:id="@+id/LoginButton"
        android:layout_width="140dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="60dp"
        android:backgroundTint="@color/btn_back"
        android:text="@string/btn_login"
        android:textColor="@color/black"
        android:textSize="@dimen/btn_size"
        app:layout_constraintEnd_toStartOf="@+id/ClearButton"
        app:layout_constraintHorizontal_bias="0.478"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LoginHint" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="fill_parent"
        android:layout_height="360dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/dog_title"
        android:backgroundTint="@color/back_tint"
        android:backgroundTintMode="src_atop"
        android:fontFamily="sans-serif-light"
        android:gravity="center"
        android:text="@string/title_desc"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/desc_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <TextView
        android:id="@+id/Title"
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:background="@color/btn_back"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/title_page"
        android:textSize="@dimen/title_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/EditUserPassword"
        android:layout_width="280dp"
        android:layout_height="48dp"
        android:layout_marginTop="24dp"
        android:ems="10"
        android:hint="@string/pass_hint"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EditUser" />

    <TextView
        android:id="@+id/LoginHint"
        android:layout_width="fill_parent"
        android:layout_height="20sp"
        android:layout_marginBottom="120dp"
        android:text="@string/login_helper"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/EditUser"
        android:layout_width="281dp"
        android:layout_height="48dp"
        android:layout_marginTop="396dp"
        android:ems="10"
        android:hint="@string/user_hint"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

</androidx.constraintlayout.widget.ConstraintLayout>